# ACM-Application

./: .travis.yml  README.md
backend/: .env  Cargo.toml  database_init.sql
backend/migrations/2019-12-11-053044_users/: down.sql  up.sql
backend/src/: auth.rs  db.rs  main.rs  schema.rs
backend/src/endpoints/: event.rs  login.rs  mod.rs
backend/src/models/: event.rs  event_type.rs  mod.rs  password.rs  user.rs  usertype.rs
frontend/: package-lock.json  package.json
frontend/src/: index.html  inputs.sass  pallet.sass  styles.sass
frontend/src/app/: app.component.html  app.module.ts
frontend/src/app/home/: home.component.html
frontend/src/app/login-pop-up/: login-pop-up.component.html  login-pop-up.component.sass  login-pop-up.component.spec.ts  login-pop-up.component.ts
frontend/src/app/main-nav/: main-nav.component.html  main-nav.component.sass  main-nav.component.ts
