[package]
name = "backend"
version = "0.1.0"
authors = ["Dalton Caron <dcaron@mtech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.2"
rocket_codegen = "0.4.2"
rocket_failure = { version="0.1", features = ["with-rocket"] }
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
chrono = { version = "0.4.10", features = ["rustc-serialize", "serde"] }
diesel = { version = "1.4.3", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.9.0"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3.24"
regex = "*"